--- a/Paris.html
+++ b/Paris.html
@@ -23,6 +23,7 @@
 
 <nav>
   <ul>
+    <li><a href="index.html">Inicio</a></li>
     <li><a href="Mexico.html">M&eacute;xico</a></li>
     <li><a href="Paris.html">Par&iacute;s</a></li>
     <li><a href="Tokyo.html">Tokyo</a></li>
