--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
    </ul>
   </nav>
   <section>
-  	   <article class="banderaMun">
-  	   <h1> <span id="mundo">En el MUndo</span></h1>
-  	   <p>En el mundo existen 197 paises, 54 en Africa, 48 en Asia, 35 en America y 34 en Oceania.</p>
-    	 <p>En esta pagina solo te hablaremos de 8 capitales de 8 paises los cuales se nos han hecho impotantes para esta practica, esperemos que te sirva de ayuda para algun tipo de investigacion, si necesitas mas informacion, puedes buscar en Google :D</p>
+  	  <article class="banderaMex">
+  	   <h1> <span id="mexico">M&eacute;xico</span></h1>
+  	   <p>La Ciudad de M&eacute;xico es la capital de la Rep&uacute;blica Mexicana. Anterioremente se conocia como Distrito Federal. Es la ciudad con m&aacutes poblaci&oacute;n, con un &acute;rea metropolitana que sobrepasa los 21 millones de habitantes.</p>
+    	 <p>Se establece sobre un asentamiento mexica, lo nombraron M&exico Tenochtitlan. En 1535 se cre&oacute; oficialmente el Virreinato de la Nueva España.</p>
         </article>
   </section>
   <footer>Copyright &copy; itorizaba.edu.mx</footer>
